--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,88 @@ body {
     background-repeat: repeat;
 }
 
+.inner-page .main-header {
+    margin-bottom: 50px;
+
+    background-color: #000000;
+}
+
 a {
     text-decoration: none;
+}
+
+.container {
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+.main-header {
+    margin-bottom: 75px;
+}
+
+.main-navigation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    font-size: 16px;
+    line-height: 20px;
+    color: #ffffff;
+
+    background-color: transparent;
+}
+
+.inner-page .main-navigation {
+    align-items: flex-start;
+    flex-direction: row;
+}
+
+.main-header-logo {
+    order: 2;
+
+    width: 368px;
+    height: 153px;
+}
+
+.inner-page .main-header-logo {
+    order: 0;
+
+    width: 111px;
+    height: 24px;
+    padding: 23px 20px;
+}
+
+.main-navigation-wrapper {
+    width: 100%;
+    margin-bottom: 60px;
+
+    background-color: #000000;
+}
+
+.main-navigation-wrapper .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.site-navigation {
+    width: 620px;
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+}
+
+.user-navigation {
+    width: 140px;
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+}
+
+.inner-page .user-navigation {
+    margin-left: auto;
 }
 
 .button {
@@ -44,19 +124,7 @@ a {
 .button:focus,
 .button:active {
     background-color: #663d15;
-}
-
-.main-navigation {
-    font-size: 16px;
-    line-height: 20px;
-    color: #ffffff;
-
-    background-color: #000000;
-}
-
-.site-navigation,
-.user-navigation {
-    list-style: none;
+    background-color: #663d15;
 }
 
 .site-navigation a,
@@ -71,11 +139,22 @@ a {
     background-color: #242424;
 }
 
+.features {
+    margin-bottom: 80px;
+}
+
 .features-list {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+
     list-style: none;
 }
 
 .feature-item {
+    width: 300px;
+
     text-align: center;
 }
 
@@ -86,6 +165,11 @@ a {
 
 .index-columns {
     color: #000000;
+
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 80px;
+    margin-bottom: 35px;
 
     background-color: #f8f5f2;
     background-image: url("../img/pattern-light.jpg");
@@ -98,6 +182,10 @@ a {
     line-height: 42px;
 }
 
+.news {
+    width: 380px;
+}
+
 .news-list {
     list-style: none;
 }
@@ -106,9 +194,21 @@ a {
     text-decoration: none;
 }
 
+.gallery {
+    width: 300px;
+}
+
 .gallery-content {
     background-color: #cccccc;
     border: 7px solid #ffffff;
+}
+
+.contacts {
+    width: 380px;
+}
+
+.appointment {
+    width: 300px;
 }
 
 .appointment-item input {
@@ -123,6 +223,10 @@ a {
 }
 
 .page-title {
+    margin: 0;
+    margin-bottom: 15px;
+    padding: 0
+;
     font-size: 30px;
     line-height: 42px;
 }
@@ -132,6 +236,10 @@ a {
 }
 
 .breadcrumbs a {
+    padding: 0;
+    margin: 0;
+    margin-bottom: 50px;
+
     color: #000000;
 }
 
@@ -142,6 +250,10 @@ a {
 
 .breadcrumbs-current {
     color: #aba9a7;
+}
+
+.filters {
+    width: 180px;
 }
 
 .filter fieldset {
@@ -169,13 +281,36 @@ a {
     opacity: 0.5;
 }
 
+.catalog {
+    width: 700px;
+}
+
+.catalog-columns {
+    display: flex;
+    justify-content: space-between;
+}
+
 .catalog-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 25px;
+
     list-style: none;
 }
 
 .catalog-item {
+    width: 220px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+
     background-color: #f8f8f8;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.catalog-item:nth-child(3n) {
+    margin-right: 0;
 }
 
 .catalog-item:hover {
@@ -209,6 +344,9 @@ a {
 }
 
 .pagination-list {
+    margin: 0;
+    padding: 0;
+
     list-style: none;
 }
 
@@ -271,13 +409,38 @@ a {
     list-style: none;
 }
 
+.product-photos {
+    width: 460px;
+}
+
+.product-info {
+    width: 390px;
+}
+
 .main-footer {
     color: #ffffff;
+
+    padding: 60px 0;
+    margin-top: 65px;
 
     background-color: #212121;
     background-image: url("../img/pattern-dark.jpg");
     background-position: 0 0;
     background-repeat: repeat;
+}
+
+.inner-page .main-footer {
+    margin-top: 45px;
+}
+
+.main-footer .container {
+    display: flex;
+}
+
+.footer-contacts {
+    width: 320px;
+    margin: 0;
+    margin-right: 80px;
 }
 
 .footer-contacts a {
@@ -291,6 +454,7 @@ a {
 }
 
 .footer-social {
+    width: 145px;
     text-align: center;
 }
 
@@ -303,6 +467,10 @@ a {
 }
 
 .footer-copyright {
+    width: 150px;
+    margin: 0;
+    margin-left: auto;
+
     text-align: center;
 }
 
